--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./index.ts",
-    "dev": "node ./index.ts",
+    "dev": "ts-node ./index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,11 +18,12 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "ts-node": "^10.9.1"
   }
 }
