--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
