--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,11 +7,16 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": " jest --env=jsdom"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "axios": "^1.4.0",
     "faker": "^6.6.6",
+    "intersection-observer": "^0.12.2",
+    "jest": "^29.7.0",
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -19,9 +24,12 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "@types/react": "^18.2.15",
     "@types/react-csv": "^1.1.5",
     "@types/react-dom": "^18.2.7",
@@ -29,8 +37,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
