--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -1,9 +1,15 @@
+
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES6",
+    "module": "ES6",
+    "jsx": "react",
+    "strict": true,
+    "esModuleInterop": true,
+    // "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    // "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -12,10 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    // "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    // "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
