--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon ./index.ts",
     "dev": "ts-node ./index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,15 +16,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
